Progress bar setup and html syntax fixed

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>ng-file-upload directive example</title>
+  <meta charset="UTF-8" />
+  <title>File upload directive example</title>
 
-  <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="lib/blueimp-file-upload/css/jquery.fileupload.css">
-  <link rel="stylesheet" href="lib/blueimp-file-upload/css/jquery.fileupload-ui.css">
+  <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="lib/blueimp-file-upload/css/jquery.fileupload.css" />
+  <link rel="stylesheet" href="lib/blueimp-file-upload/css/jquery.fileupload-ui.css" />
 </head>
 <body>
   <div data-ng-app="app" data-ng-controller="MainCtrl as main">
