--- a/ng-file-upload.html
+++ b/ng-file-upload.html
@@ -4,6 +4,6 @@
     <input id="upload-input" type="file" name="file" />
   </label>
   <div class="progress">
-    <div class="progress-bar progress-bar-success"></div>
+    <div class="progress-bar progress-bar-success" ng-style="{'width': progress + '%' }"></div>
   </div>
 </div>
