File upload setup

--- a/ng-file-upload.html
+++ b/ng-file-upload.html
@@ -1,7 +1,7 @@
 <div id="ng-file-upload">
   <label for="upload-input">
     Upload file
-    <input id="upload-input" type="file" name="file" />
+    <input id="upload-input" type="file" name="file" data-url="https://upload.wistia.com" />
   </label>
   <div class="progress">
     <div class="progress-bar progress-bar-success" ng-style="{'width': progress + '%' }"></div>
