--- a/ng-file-upload.html
+++ b/ng-file-upload.html
@@ -6,4 +6,5 @@
   <div class="progress">
     <div class="progress-bar progress-bar-success" ng-style="{'width': progress + '%' }"></div>
   </div>
+  <iframe data-ng-show="embedUrl" data-ng-src="embedUrl" allowtransparency="true" frameborder="0" scrolling="no" name="wistia_embed" allowfullscreen mozallowfullscreen webkitallowfullscreen oallowfullscreen msallowfullscreen width="620" height="349"></iframe>
 </div>
