Fixed variable call; Fixed timeout; Added some style.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="lib/blueimp-file-upload/css/jquery.fileupload-ui.css" />
 </head>
 <body>
-  <div data-ng-app="app" data-ng-controller="MainCtrl as main">
+  <div data-ng-app="app" data-ng-controller="MainCtrl as main" class="container">
     <form enctype="multipart/form-data">
       <ng-file-upload></ng-file-upload>
     </form>
